# simlog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/hospital_staffing/: components.py  events.py  main.py
src/simlog/data_models/: __init__.py  event_log.py
src/simlog/engine/: __init__.py  base.py  component_manager.py  environment.py
src/simlog/events/: __init__.py  events.py
