[tool.poetry]
name = "simlog"
version = "0.1.0"
description = "SimPy Extension"
authors = ["christophergs <christopher.samiullah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
simpy = "^4.1.1"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
